# InductiveCode

./: .gitignore  CMakeLists.txt  platformio.ini
.agents/: AGENTS.md
firmware/: platformio.ini
firmware/api_cpp_examples/: CMakeLists.txt  main.cpp
firmware/api_cpp_examples/Commands/: Commands.cpp  Commands.h
firmware/api_cpp_examples/SSHDriver/: SSHDriver.cpp  SSHDriver.h
firmware/api_cpp_examples/libssh/: libssh2.so.1
firmware/include/: PacketEncoder.h
firmware/src/: .main_calibrated.cpp  main.cpp
firmware/test/test_packet_encoder/: test_packet_encoder.cpp
matlab/: CivilSensorCalibv2.m  Sensor.m  datalogger_matlab.m  sensor_data_20260521_094035.csv  sensor_data_20260521_094359.csv
matlab/calibration/: CivilCalibFunction.m  CivilSensor1.mat  CivilSensorCalibv2.m  calib2.mat  datalogger_calibration_matlab.m  matlab1.mat  matlab_calib.m  myNeuralNetworkFunction.m  net.mat  nn_wb.mat  nn_weights.mat  train2.m  validate_calibrations.m
matlab/calibrations/: S2_net.mat  S3_net.mat  S4_net.mat  S5_net.mat  S6_net.mat
matlab/experimental/: crack_sensor_lab.m  matlab_valid.m  sensor_read_matlab_copy.m
python/: install.py  validation_data_s1.txt
python/datalogger/: calibration.py  datalogger.py  datalogger_calibration.py  sensor_read.py  sensor_test.py  solano_telnet.py
python/v2_sensor/: calibration_s2_20260520-102905.csv  calibration_s3_20260520-112205.csv  calibration_s4_20260520-114405.csv  calibration_s5_20260520-120408.csv  calibration_s6_20260520-122512.csv  validation_s1_20260520-093628.csv
python/v2_sensor/models/: s2.pth  (+5 more)
src/: main.cpp
(+63 files in other folders)
